  (contributed by Scott McCreary)
* Added helper function that multiplies the alpha channel in
  a 32bit surface (contributed by Zbigniew Holdys)
* Disable MMX for 64bit platforms due to lack of support for
  pusha/popa (contributed by Olivier Boudeville)
* Update all library functions for doxygen markup. Add doxygen
  configuration file.
* Added font rotation support and updated TestFonts sample

Ver 2.0.20 - Wed Sep 23 18:42:02 PDT 2009
* Fix for 1-pixel postponement with 8bit scaling 
* Updates to headers and configure to allow for cross-compiling 
  to DLL (not just static .a) and fixes for compiling on Windows 
  using autotools
* Added Visual CE Project to Other Builds
* Added Symbian and Windows 64bit fix for lrint function.

Ver 2.0.19 - Mon Apr 20 22:56:59 PDT 2009

* gcc43 compiler patch for asm code in image filters 
  as per http://bugs.gentoo.org/219621 (Peter Alfredsen)
* off-by-one hline patch for 1byte indexed surfaces (Manuel Lausch)
* update acinclude.m4 from SDL-1.2 and moved # serial in file
* applied patch to add pkg-config support for SDL_gfx (Luca Bigliardi)
* changed configure.in INTERFACE_AGE and BINARY_AGE based on Debian
  build feedback (Barry deFreese)
* fixed zoom XY-flip code and made it available for all modes in
  zoom and rotations
* fixed edge issue on interpolated rotozoom modes
* updated TestRotozoom custom test mode, added delay parameter, added
  tests which include flipping, included negative rotation
* update libtool files
* updated Makefile.mingw (Jan Leike)

Ver 2.0.18 - Sun Dec 21 08:38:20 PST 2008

* libtool update for dependencies
* MSVC C89 variable hoisting to enable MSVC compile (sweetlilmre)
* addition of VC9 (Visual Studio 2008) project file (sweetlilmre)
* update to MinGW make file (Sergio Padrino, sweetlilmre)
* fix uninitialised variables in _putPixelAlpha() (Paul Pedriana)
* reverted to original alpha routine in _putPixelAlpha() as new one was causing issues in 16bbp